tests/neg/inline-val.scala

inline val a = 1 : Int // error
inline val b: Int = 1 // ok
inline val c = b // ok
